# HealthClawGuardrails

./: .dockerignore  .env.example  .gitignore  .health-context.yaml  .mcp.json  CHANGELOG.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  INTEGRATION.md  LICENSE  LICENSE-MIT-v1.7-and-earlier  LICENSING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  action_policy.yaml  alembic.ini  app.py  docker-compose.yml  gemini-extension.json  main.py  package.json  pyproject.toml  railway.toml  server.json  vercel.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  REVIEW_STANDARDS.md  dependabot.yml  exempt-superpowers-docs
adapters/: tools.manifest.json
api/: index.py
careagents/: __init__.py  accounts.py  advisors.py  agent.py  app.py  config.py  connectors.py  healthclaw.py  llm.py  mail.py  models.py  personas.py  wsgi.py
docs/: ROADMAP.md  agent-task-guide.md  beta-program.md  beta-tester-guide.md  dev-days-demo-runbook.md  dev-days-presentation.md  development.md  devpost-submission.md  ecosystem-contribution-plan.md  extending-the-action-rail.md  goal-2026-06-05-e2e-production.md  healthbankone-call-notes.md  healthcare-ai-advisors-roadmap.md  hl7-sdc-feedback.md  mac-mini-setup.md  plugin-desktop-verification.md
e2e/: package-lock.json  package.json  playwright.config.ts
hermes/: README.md  SOUL.md  install.sh  mcp.json
knowledge/: index.md
migrations/: README  env.py
openclaw/: Dockerfile  SKILL.md  bot.py  railway.toml
r6/: audit.py  consent.py  curatr.py  database_migrations.py  email_inbound.py  fhir_proxy.py  health_compliance.py  health_context.py  models.py  oauth.py  rate_limit.py  read_auth.py  redaction.py  routes.py  runtime_config.py  schema_sync.py  seed.py  stepup.py  telegram_push.py  validator.py  version.py
scripts/: benchmark_claude_cli.py  benchmark_local_models.py  bot_commands.py  bot_commands_install.sh  build_devpost_pdf.py  build_quickstart_pdf.py  careagents_smoke.py  convert_fasten.py  convert_hbo_export.py  demo_e2e.sh  demo_smoke.py  export_healthbankone_mcp.py  export_healthex.py  export_healthex_legacy.py  export_healthex_mcp.py  export_medent_fhir.py  guardrail_conformance.py  healthbankone_oauth.py  healthclaw_redact.py  import_healthex.py  kristy_install.sh  kristy_schedule_watcher.py  linkedin_digest.py  medent_oauth.py  migrate_resource_identity.py  smoke_medplum.py  (+6 more)
(+308 files in other folders)
