[project]
name = "healthclaw-guardrails"
version = "1.9.0"
description = "HealthClaw Guardrails — FHIR R4 US Core v9 + R6 MCP guardrail proxy (healthclaw.io)"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5,<2",
    "anthropic>=0.49.0",
    "cryptography>=48.0.1",  # floor over GHSA-537c-gmf6-5ccf (OpenSSL-in-wheel); backs pyjwt token signing
    "email-validator>=2.2.0",
    "fhirpathpy>=2.2.1,<3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.27.0",
    "marshmallow>=3.26.1",
    "mcp>=1.28.1",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "redis>=4.6.0",
    "requests>=2.33.0",
    "webauthn>=3.0.0,<4",  # CareAgents passkey (WebAuthn) auth
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0,<8",
]

[dependency-groups]
dev = [
    "mypy>=2.0,<3",
    "pytest>=9.0.3",
    "pytest-cov>=7.0,<8",
    "python-telegram-bot>=20.0",
    "reportlab>=4.0",
    "ruff>=0.15,<1",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E402: mid-file imports are the established register_*_routes pattern
# (see r6/routes.py blueprint wiring); keep the rest of pycodestyle+pyflakes.
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# Deliberate one-line dispatcher idioms in deployed CLI scripts.
"scripts/bot_commands.py" = ["E701"]
"scripts/medent_oauth.py" = ["E701"]

[tool.mypy]
python_version = "3.11"
files = [
    "r6/runtime_config.py",
    "r6/read_auth.py",
    "r6/actions/state.py",
    "r6/stepup.py",
    "r6/rate_limit.py",
]
follow_imports = "skip"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
